# Call-Me-Maybe-42

./: .gitignore  Makefile  README.md  mermaid.txt  pyproject.toml  test_llm.py  vocabulary1.py
.github/workflows/: ci.yml
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+244 more)
.mypy_cache/3.13/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json
.mypy_cache/3.13/annotated_doc/: __init__.data.json  (+3 more)
data/input/: function_calling_tests.json  functions_definition.json
src/: __init__.py  __main__.py  config.py  constrained_decoder.py  data_loader.py  functions_validator.py  generator.py  json_generator.py  main.py  model_pydantic.py  parser.py  parsing.py  state_machine.py  vocabulary.py
(+1759 files in other folders)
