[project]
name = "call-me-maybe"
version = "1.0.0"
description = "Introduction to function calling in LLMs"
readme = "README.md"
author = [{name = "advacher", email ="advacher@student.42lyon.fr"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
exclude = ["\\.venv", "venv", "build", "dist"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
